--- a/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/logged_layout.html.twig
@@ -90,11 +90,13 @@
                             <li><a href="{{ path('_expediente_report_routes') }}">{% trans %}label.routes{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_zones') }}">{% trans %}label.routes.by.zone{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.by.route{% endtrans %}</a></li>
-                            <li><a href="{{ path('_expediente_report_students_by_route') }}">{% trans %}label.students.absences.by.route{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_students_by_route_club') }}">{% trans %}label.students.by.route.club{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_absences_by_route') }}">{% trans %}label.students.absences.by.route{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_daily_by_route') }}">{% trans %}label.students.daily.by.route{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_students') }}">{% trans %}label.students{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_clubs') }}">{% trans %}label.clubs{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_period_notes_by_group') }}">{% trans %}menu.qualifications.report{% endtrans %}</a></li>
+                            <li><a href="{{ path('_expediente_report_best_averages_by_group') }}">{% trans %}menu.averages.report{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_group_qualifications_by_rubro') }}">{% trans %}menu.qualifications.of.group.by.rubro{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_student_qualifications') }}">{% trans %}menu.detail.student.qualifications{% endtrans %}</a></li>
                             <li><a href="{{ path('_expediente_report_routes_club') }}">{% trans %}label.routes.club{% endtrans %}</a></li>
