--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodGroupQualifications.html.twig
@@ -45,7 +45,7 @@
             <div id="labelPeriod" class="left">
                 <select id="period" name="period" style="width: 150px;">
                     {% for period in periods %}
-                    <option value="{{ period.id }}">{{period}}</option>
+                    <option {% if period.isActual == '1' %}  selected="selected" {% endif %} value="{{ period.id }}">{{period}}</option>
                     {% endfor %}
                 </select>
             </div>
