--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route.html.twig
@@ -63,7 +63,7 @@
                 <div class="student_row">
                     <div style="float: left; width: 50px;">{{ student.carne }}</div>
                     <div style="float: left; width: 200px;">{{ student }}</div>
-                    <div style="float: left; width: 60px;">&nbsp;</div>
+                    <div style="float: left; width: 50px;">{{ student.groupyear }}</div>
                     <div style="float: left; width: 315px;">{{ student.address }}</div>
                     <div style="float: left; width: 50px;">&nbsp;</div>
                     <div style="float: left; width: 55px;">{{ student.pickUp }}</div>
