--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/periodBestAverages.html.twig
@@ -58,13 +58,13 @@
                     </div>
                 </div>
 
-                <div id="coursesContainer" class="left" style="margin-left: 40px;">
+                <!-- <div id="coursesContainer" class="left" style="margin-left: 40px;">
                     <div class="left" style="width: 95px; font-weight: bold;">{%trans%}label.student{%endtrans%}</div>
                     <div class="left">
                         <select id="students" name="students" style="width: 150px;">
                         </select>
                     </div>
-                </div>
+                </div> -->
 
                 <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Calificaciones"><span></span>{% trans %}label.print{% endtrans %}</button>
                 <div class="clear"></div>
