--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route_club.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students_by_route_club.html.twig
@@ -21,12 +21,17 @@
                 </div>
                 <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Rutas por Zona"><span></span>{% trans %}label.print{% endtrans %}</button>
                 <div class="clear"></div>
+                <div class="right" style="margin-top: -2px;"><a style="margin: 4px 0px 0px 0px;" href="#" class="button success-darker tiny" id="btnSearch" name="btnSearch"><span></span>{% trans %}label.search{% endtrans %}</a></div>
+                <div class="right" style="width: 5px; height: 26px"></div>
+                <div class="option_width right">
+                    <input id="searchText" name="searchText">
+                </div>
             </div>
 
             <div id="report" style="margin-top: 25px;">
 
                 <div class="titles" style="font-size: 10px;">
-                    <div class="left">Corporación Educativa Saint Michael S.A.</div>
+                    <div class="left">Corporaci贸n Educativa Saint Michael S.A.</div>
                     <div class="right">Control de Buses Escuela.</div>
                     <div class="clear"></div>
 
@@ -41,41 +46,34 @@
                     <div class="fields_row route">
                         <p style="text-decoration: underline; padding-bottom: 0px;">Ruta {{ loop.index }}: {{ route.code ~ " - " ~ route.description }}</p>
                         {% if route.bus != "" %}
-                            <p style="font-size: 10px; padding-bottom: 0px;">Chofer: {{ route.bus.driver}} &emsp;Placa: {{ route.bus.licensePlate }} &emsp;Teléfono: {{ route.bus.telephone }}&emsp; Capacidad: {{ route.bus.capacity }}</p>
+                            <p style="font-size: 10px; padding-bottom: 0px;">Chofer: {{ route.bus.driver}} &emsp;Placa: {{ route.bus.licensePlate }} &emsp;Tel茅fono: {{ route.bus.telephone }}&emsp; Capacidad: {{ route.bus.capacity }}</p>
                         {% else %}
                             <p style="font-size: 10px; padding-bottom: 0px;">No se ha definido la buseta.</p>
                         {% endif %}
                     </div>
-                    <div class="fields_row student_title">
+                    <div class="fields_row student_title" style="width: 750px;">
                         <div style="float: left; width: 50px;">{%trans%}label.carne{%endtrans%}</div>
-                        <div style="float: left; width: 200px;">{%trans%}label.student.name{%endtrans%}</div>
+                        <div style="float: left; width: 250px;">{%trans%}label.student.name{%endtrans%}</div>
                         <div style="float: left; width: 60px;">{%trans%}label.section{%endtrans%}</div>
-                        <div style="float: left; width: 315px;">{%trans%}label.address{%endtrans%}</div>
-                        <div style="float: left; width: 50px;">{%trans%}label.schedule{%endtrans%}</div>
-                        <div style="float: left; width: 55px;">{%trans%}label.pickUp{%endtrans%}</div>
-                        <div style="float: left; width: 50px;">{%trans%}label.leaveTime{%endtrans%}</div>
-                        <div style="float: left; width: 70px;">{%trans%}label.fatherPhoneShort{%endtrans%}</div>
-                        <div style="float: left; width: 70px;">{%trans%}label.motherPhoneShort{%endtrans%}</div>
+                        <div style="float: left; width: 320px;">{%trans%}label.address{%endtrans%}</div>
+                        <div style="float: left; width: 10px;"></div>
 
                         <div class="clear"></div>
                     </div>
                     {% for student in route.studentsToRoute %}
                         <div class="student_row">
                             <div style="float: left; width: 50px;">{{ student.getCarneStudent() }}</div>
-                            <div style="float: left; width: 200px;">{{ student.getNameStudent() }}</div>
+                            <div style="float: left; width: 250px;">{{ student.getNameStudent() }}</div>
                             <div style="float: left; width: 60px;">{{ student.getGroupyearStudent() }}</div>
-                            <div style="float: left; width: 315px;">{{ student.getAdressStudent() }}</div>
-                            <div style="float: left; width: 50px;">&nbsp;</div>
-                            <div style="float: left; width: 55px;"></div>
-                            <div style="float: left; width: 50px;"></div>
-                            <div style="float: left; width: 70px;"></div>
-                            <div style="float: left; width: 70px;"></div>
+                            <div style="float: left; width: 320px;">{{ student.getAdressStudent() }}</div>
+                            <div style="float: left; width: 10px;"></div>
                         </div>
                         <div class="clear"></div>
                     {% endfor %}
                     <div class="student_footer">
                         Total de estudiantes por ruta: {{ route.students|length}}
                     </div>
+                    <div class="pageBreak"> </div>
                 {% else %}
                     <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
                         <div class="option_width" style="float: left; width: 375px;">{% trans %}results.not.found{% endtrans %}</div>
