--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Ticket/show.html.twig
@@ -8,55 +8,27 @@
 {% endblock %}
 
 {% block extrajs %}
-<script type="text/javascript" src="{{ asset('js/jquery.printElement.min.js') }}"
-        xmlns="http://www.w3.org/1999/html"></script>
-<script type="text/javascript">
-    Tecnotek.module = "reports";
-    Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
-</script>
+    <script type="text/javascript" src="{{ asset('js/jquery.printElement.min.js') }}"
+            xmlns="http://www.w3.org/1999/html"></script>
+    <script type="text/javascript">
+        Tecnotek.module = "reports";
+        Tecnotek.assetsURL = "{{ path('TecnotekExpedienteBundle_homepage')}}";
+    </script>
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <a href="{{ path('_expediente_sysadmin_student_show_ticket_return') }}" class="right button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a>
-            <button style="margin-right: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Boleta de Salida">
-                <span></span>{% trans %}label.print{% endtrans %}
-            </button>
-            <div class="clear"></div>
-        </div>
+    <div class="container_24">
+        <div class="grid_24">
+            <div>
+                <a href="{{ path('_expediente_sysadmin_student_show_ticket_return') }}" class="right button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a>
+                <button style="margin-right: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Boleta de Salida">
+                    <span></span>{% trans %}label.print{% endtrans %}
+                </button>
+                <div class="clear"></div>
+            </div>
 
-        <div id="report" style="margin-top: 25px; border: solid thin #000;">
+            <div id="report" style="margin-top: 25px; border: solid thin #000;">
 
-            <div class="center"><h3><img width="820" height="140" src="{{ asset('images/' ~ header) }}" alt="" class="image-hover"></h3></div>
-
-            <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
-
-            <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket3 {% endtrans %} {{ ticket.date|date("d-m-Y H:i:s") }}</div>
-            </br></br>
-
-            <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket1 {% endtrans %} {{ ticket.student }}, SECCION: {{ ticket.student.groupyear }}</div>
-            </br></br>
-
-            <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
-            </br></br>
-
-            </br></br></br></br>
-            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
-            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
-            </br></br>
-            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
-            <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
-            </br></br></br></br></br></br></br></br></br></br>
-            <div class="center" style="float: left; width: 900px; font-size: 14px;">{{ text }}</div>
-            </br></br>
-            {% if ticket.student.groupyear == '1-A' or ticket.student.groupyear == '1-B' or ticket.student.groupyear == '1-C' or
-            ticket.student.groupyear == '2-A' or ticket.student.groupyear == '2-B' or ticket.student.groupyear == '2-C' or
-            ticket.student.groupyear == '3-A' or ticket.student.groupyear == '3-B' or ticket.student.groupyear == '3-C' or
-            ticket.student.groupyear == '4-A' or ticket.student.groupyear == '4-B' or ticket.student.groupyear == '4-C' or
-            ticket.student.groupyear == '5-A' or ticket.student.groupyear == '5-B' or ticket.student.groupyear == '5-C' or
-            ticket.student.groupyear == '6-A' or ticket.student.groupyear == '6-B' or ticket.student.groupyear == '6-C' %}
                 <div class="center"><h3><img width="820" height="140" src="{{ asset('images/' ~ header) }}" alt="" class="image-hover"></h3></div>
 
                 <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
@@ -71,23 +43,72 @@
                 </br></br>
 
                 </br></br></br></br>
-                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
-                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                {% if ticket.student.groupyear == '11-1' or ticket.student.groupyear == '11-2' or ticket.student.groupyear == '11-3' or
+                ticket.student.groupyear == '10-1' or ticket.student.groupyear == '10-2' or ticket.student.groupyear == '10-3' or
+                ticket.student.groupyear == '9-1' or ticket.student.groupyear == '9-2' or ticket.student.groupyear == '9-3' or
+                ticket.student.groupyear == '8-1' or ticket.student.groupyear == '8-2' or ticket.student.groupyear == '8-3' or
+                ticket.student.groupyear == '7-1' or ticket.student.groupyear == '7-2' or ticket.student.groupyear == '7-3'  %}
+
+                    <div class="center" style="float: left; width: 160px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+
+
+                {% endif %}
                 </br></br>
-                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
-                <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+                <div class="center" style="float: left; width: 300px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+                {% if ticket.student.groupyear == '11-1' or ticket.student.groupyear == '11-2' or ticket.student.groupyear == '11-3' or
+                ticket.student.groupyear == '10-1' or ticket.student.groupyear == '10-2' or ticket.student.groupyear == '10-3' or
+                ticket.student.groupyear == '9-1' or ticket.student.groupyear == '9-2' or ticket.student.groupyear == '9-3' or
+                ticket.student.groupyear == '8-1' or ticket.student.groupyear == '8-2' or ticket.student.groupyear == '8-3' or
+                ticket.student.groupyear == '7-1' or ticket.student.groupyear == '7-2' or ticket.student.groupyear == '7-3'  %}
+
+                    <div class="center" style="float: left; width: 160px; font-size: 14px;">{% trans %}label.ticket7 {% endtrans %}</div>
+
+
+                {% endif %}
                 </br></br></br></br></br></br></br></br></br></br>
-                <div class="center" style="float: left; width: 900px; font-size: 14px;">{{ text }}</div>
+                <div class="center" style="float: left; width: 860px; font-size: 14px;">{{ text }}</div>
                 </br></br>
-            {% endif %}
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
+                <!--  if ticket.student.groupyear == '1-A' or ticket.student.groupyear == '1-B' or ticket.student.groupyear == '1-C' or
+                ticket.student.groupyear == '2-A' or ticket.student.groupyear == '2-B' or ticket.student.groupyear == '2-C' or
+                ticket.student.groupyear == '3-A' or ticket.student.groupyear == '3-B' or ticket.student.groupyear == '3-C' or
+                ticket.student.groupyear == '4-A' or ticket.student.groupyear == '4-B' or ticket.student.groupyear == '4-C' or
+                ticket.student.groupyear == '5-A' or ticket.student.groupyear == '5-B' or ticket.student.groupyear == '5-C' or
+                ticket.student.groupyear == '6-A' or ticket.student.groupyear == '6-B' or ticket.student.groupyear == '6-C'  -->
+                {% if ticket.student.groupyear == '1-Aasdsa' %}
+                    <div class="center"><h3><img width="820" height="140" src="{{ asset('images/' ~ header) }}" alt="" class="image-hover"></h3></div>
+
+                    <div class="center"><h3>{% trans %}label.ticket4{% endtrans %}</h3></div>
+
+                    <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket3 {% endtrans %} {{ ticket.date|date("d-m-Y H:i:s") }}</div>
+                    </br></br>
+
+                    <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket1 {% endtrans %} {{ ticket.student }}, SECCION: {{ ticket.student.groupyear }}</div>
+                    </br></br>
+
+                    <div class="center" style="float: left; width: 900px; font-size: 16px;">{% trans %}label.ticket2 {% endtrans %} {{ ticket.relative.contact }}</div>
+                    </br></br>
+
+                    </br></br></br></br>
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5a {% endtrans %}</div>
+                    </br></br>
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket5 {% endtrans %}</div>
+                    <div class="center" style="float: left; width: 320px; font-size: 14px;">{% trans %}label.ticket6 {% endtrans %}</div>
+                    </br></br></br></br></br></br></br></br></br></br>
+                    <div class="center" style="float: left; width: 860px; font-size: 14px;">{{ text }}</div>
+                    </br></br>
+                {% endif %}
             </div>
+            <div class="clear"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="wrapper">
+            <div class="grid_24 padline">
+                <div class="lineH"></div>
+            </div>
+        </div>
     </div>
-</div>
 {% endblock %}
