--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/course_entries.html.twig
@@ -50,7 +50,9 @@
                         <div id="labelPeriod" class="left">
                             <select id="period" name="period" style="width: 205px;">
                                 {% for period in periods %}
-                                <option value="{{ period.id }}">{{period}}</option>
+                                    {% if period.isActual == '1' %}
+                                        <option value="{{ period.id }}">{{period}}</option>
+                                    {% endif %}
                                 {% endfor %}
                             </select>
                         </div>
