--- a/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/Teacher/observations.html.twig
@@ -74,7 +74,9 @@
                 <div id="labelPeriod" class="left">
                     <select id="period" name="period" style="width: 150px;">
                         {% for period in periods %}
-                            <option value="{{ period.id }}">{{period}}</option>
+                            {% if period.isActual == '1' %}
+                                <option value="{{ period.id }}">{{period}}</option>
+                            {% endif %}
                         {% endfor %}
                     </select>
                 </div>
