--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/list.html.twig
@@ -28,6 +28,7 @@
                 <div class="option_width" style="float: left; width: 150px;">{% trans %}label.name{% endtrans %}</div>
                 <div class="option_width" style="float: left; width: 75px;">{% trans %}label.year{% endtrans %}</div>
                 <div class="option_width" style="float: left; width: 150px;">{% trans %}label.current.period{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 150px;">{% trans %}label.editable{% endtrans %}</div>
             </div>
 
             {% for entity in pagination %}
@@ -35,6 +36,7 @@
                 <div class="option_width" style="float: left; width: 150px;">{{ entity.name }}</div>
                 <div class="option_width" style="float: left; width: 75px;">{{ entity.year }}</div>
                 <div class="option_width" style="float: left; width: 150px;">{% if entity.actual %}{% trans %}label.yes{% endtrans %}{% else %} {% trans %}label.no{% endtrans %} {% endif %}</div>
+                <div class="option_width" style="float: left; width: 150px;">{% if entity.editable %}{% trans %}label.yes{% endtrans %}{% else %} {% trans %}label.no{% endtrans %} {% endif %}</div>
                 <div class="right imageButton adminButton"  title="{% trans %}label.admin{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="right imageButton viewButton"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
