--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -37,26 +37,39 @@
                 <div class="left">
                     <label>{%trans%}label.generate.by{%endtrans%}:</label>
                     <input type="radio" name="tipo" value="1" {% if tipo==1 or tipo==0 %}checked{% endif %} > {%trans%}label.group{%endtrans%}
-                    <select id="grade" name="grade" style="width: 100px">
-                        {% for group in groups %}
-                            <option value="{{ group.id }}">{{group}}</option>
-                        {% endfor %}
-                    </select>
+
                     <input type="radio" name="tipo" value="2" {% if tipo==2 %}checked{% endif %}> {%trans%}label.grade{%endtrans%}
-                    <select id="grade" name="grade" style="width: 100px">
-                        {% for grade in grades %}
-                            <option value="{{ grade.id }}">{{grade}}</option>
-                        {% endfor %}
-                    </select>
+
                     <input type="radio" name="tipo" value="3" {% if tipo==3 %}checked{% endif %}> {%trans%}label.institution{%endtrans%}
-                    <select id="institution" name="institution" style="width: 100px">
-                        {% for institution in institutions %}
-                            <option value="{{ institution.id }}">{{institution}}</option>
-                        {% endfor %}
-                    </select>
+
                 </div>
                 <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="right button success-darker tiny" name="search"><span></span>{% trans %}label.generate{% endtrans %}</button>
                 <div class="clear"></div>
+                <div>
+                    <label style="width: 126px;">Filtrar por:</label>
+                    <label style="width: 45px;">Grupo:</label>
+                    <select id="grade" name="grade" style="width: 100px">
+                        <option value="0">Todos</option>
+                        {% for groupT in groupsT %}
+                            <option value="{{ groupT.id }}">{{groupT.grade}} {{groupT}}</option>
+                        {% endfor %}
+                    </select>
+                    <label style="width: 40px;">Nivel:</label>
+                    <select id="grade" name="grade" style="width: 100px">
+                        <option value="0">Todos</option>
+                        {% for gradeT in gradesT %}
+                            <option value="{{ gradeT.id }}">{{gradeT}}</option>
+                        {% endfor %}
+                    </select>
+                    <label style="width: 75px;">Institucion:</label>
+                    <select id="institution" name="institution" style="width: 100px">
+                        <option value="0">Todos</option>
+                        {% for institutionT in institutionsT %}
+                            <option value="{{ institutionT.id }}">{{institutionT}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                </br>
                 <div>
                     <label style="width: 126px;">{%trans%}label.include.in.report{%endtrans%}:</label>
                     <input type="checkbox" class="check" id="gender" name="gender" {% if gender != null %}checked="checked"{% endif %}>{%trans%}label.gender{%endtrans%}
@@ -76,7 +89,7 @@
             {% if groups != null %}
                 {% for group in groups %}
                     <div class="titles" style="font-size: 10px;">
-                        <div class="left">Corporaci贸n Educativa Saint Michael S.A.</div>
+                        <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
                         <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                         <div class="clear"></div>
 
@@ -133,7 +146,7 @@
                 {% if grades != null %}
                     {% for grade in grades %}
                         <div class="titles" style="font-size: 10px;">
-                            <div class="left">Corporaci贸n Educativa Saint Michael S.A.</div>
+                            <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
                             <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                             <div class="clear"></div>
 
@@ -189,7 +202,7 @@
                 {% else %}
                     {% for institution in institutions %}
                         <div class="titles" style="font-size: 10px;">
-                            <div class="left">Corporaci贸n Educativa Saint Michael S.A.</div>
+                            <div class="left">Corporaci?n Educativa Saint Michael S.A.</div>
                             <div class="right">Reporte de estudiantes. Curso Lectivo 2013</div>
                             <div class="clear"></div>
 
